<resources>
    <string name="app_name">RANGO.COM</string>
    <string name="menu_home">Home</string>
    <string name="profil">Profil</string>


    <string name="title_activity_main2">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">CONTINUE</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="numero_telephone">votre numero de telephone</string>
    <string name="my_telephone">+226 72046657</string>
    <string name="numer_check">Verification</string>
    <string name="expliq">un code  vous a  été  envoyer .</string>
    <string name="profil_text">Votre profil</string>
    <string name="profil_nom">votre nom</string>
    <string name="profil_prenom">votre prenom</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="soro_adama">SORO Adama</string>
    <string name="notification_title">RANGO.COM</string>
    <string name="defaut_notification_message">merci</string>
    <string name="condition_title">"VEUILLEZ LIRE LES CONDITIONS  "</string>
    <string name="orange_numb">" 64559610"</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="loyer_mensuel">Loyer Mensuel</string>
    <string name="ajouter_une_description">Ajouter une description</string>
    <string name="ajouter_une_adresse">Ajouter une adresse</string>
    <string name="persona1">Dite nous dans quel cadre vous oeuvrer ??</string>
    <string name="title_activity_search_coch_main">searchCochActivityMain</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="proprietaire">proprietaire</string>
    <string name="agence_imo">Agence Immobiliere</string>
    <string name="demarcheur">demarcheur</string>
    <string name="market_tex1">ceci pourra également vous interesser</string>

    <string name="key_pay">WB10J9K7VWWMPUWZ3</string>
    <string name="token_pay">eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZF9hcHAiOiI2MjAiLCJpZF9hYm9ubmUiOiI4MjIxOCIsImRhdGVjcmVhdGlvbl9hcHAiOiIyMDIxLTA1LTE4IDExOjQ2OjM0In0.Vsh6vzHmE3JOe4hzT-xPqvh155DDWEM2muxcvlI7rDA</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="default_notification_channel_id">idrissa_soro</string>
    <string name="pay_option_tex">choisissez un moyen de paiement</string>
    <string name="ligdicash">LigdiCash</string>
    <string name="mjr">Mettre à jour RANGO.COM</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="aucun">Aucun</string>
    <string name="guide_img_select">toucher dessous pour ajouter des photos</string>
    <string name="appel_offre">Appel Offre</string>
    <string name="motiv_guide">Vendre votre service à votre plan</string>
    <string name="activ_guid_service">Activer le service guide</string>
    <string name="description_for_service">Rester en alerter de tous les offres</string>
    <string name="guide_chosi">Acceptation de proposition d\'offre</string>
    <string name="alert_offre_accept">Vous alerter quand votre offre est accepter</string>
    <string name="notif_guide_groupe">com.example.rangoappoffice.guide_notif_groupe</string>


</resources>