<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SetupActivity">
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profil_img"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            android:src="@drawable/people" />
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingStart="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="@color/blue"
                android:textSize="22sp"
                android:text="@string/profil_text"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1">

        <EditText
            android:id="@+id/nom"
            android:textStyle="bold"
            android:textSize="@dimen/vint_deux"
            android:textColor="@color/black"
            android:hint="@string/profil_nom"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/prenom"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/vint_deux"
            android:hint="@string/profil_prenom"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/num_user"
            android:textStyle="bold"
            android:textSize="@dimen/vint_deux"
            android:textColor="@color/black"
            android:hint="@string/orange_numb"
            android:inputType="phone"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/town_user"
            android:textStyle="bold"
            android:textSize="@dimen/vint_deux"
            android:textColor="@color/black"
            android:hint="ville"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:gravity="center_horizontal"
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/green"
            android:text="@string/action_sign_in"
            tools:targetApi="lollipop" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>